Bug 94134 - [regression] piglit.spec.arb_texture_view.sampling-2d-array-as-2d-layer assertion
Summary: [regression] piglit.spec.arb_texture_view.sampling-2d-array-as-2d-layer asser...
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Brian Paul
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-02-13 19:12 UTC by Mark Janes
Modified: 2016-02-15 16:03 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Mark Janes 2016-02-13 19:12:05 UTC
This test now asserts at:

/tmp/build_root/m64/lib/piglit/bin/arb_texture_view-sampling-2d-array-as-2d-layer -auto -fbo

Standard Error

arb_texture_view-sampling-2d-array-as-2d-layer: /mnt/space/jenkins/jobs/Leeroy/workspace_4/repos/mesa/src/mesa/main/teximage.h:79: _mesa_cube_face_target: Assertion `face < 6' failed.

Best guess is that it started with the series ending at 9675fb6c681bf3441ee1d25e18b38faea5144524, because that series introduced the assert.  I couldn't bisect because the same series broke the build.

It  may be that the assertion is valid, and the test is wrong.
Comment 1 Roland Scheidegger 2016-02-13 19:43:13 UTC
There is one caller (in _mesa_TextureView() at least I think it's the only one) which will call this for array targets. I think the assertion just should be dropped (albeit the "face" name doesn't really make sense for non-cube targets).
Comment 2 Brian Paul 2016-02-14 14:16:55 UTC
I'll move the assertion inside the conditional.  See patch on Mesa-dev.
Comment 3 Alejandro Piñeiro (freenode IRC: apinheiro) 2016-02-15 13:11:11 UTC
(In reply to Brian Paul from comment #2)
> I'll move the assertion inside the conditional.  See patch on Mesa-dev.

The patch was reviewed and pushed:
https://cgit.freedesktop.org/mesa/mesa/commit/?id=816c987b67e3c65e17687b84f4575aaf61e9580a

And I have checked that the test moved from crash (due assertion) to pass.

I assume that people forgot to close the bug. Doing it now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.